# hayride

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
.github/windows/: download_model.bat  hayride.wixproj  hayride.wxs
.github/windows/compositions/: feature-ai.wac
.github/workflows/: release.yml
crates/hayride-app/: Cargo.toml  build.rs  tauri.conf.json
crates/hayride-app/capabilities/: default.json
crates/hayride-app/src/: lib.rs
crates/hayride-core/: Cargo.toml
crates/hayride-core/src/: lib.rs
crates/hayride-db/: Cargo.toml
crates/hayride-db/src/: connection_string.rs  lib.rs  postgres.rs  sqlite.rs
crates/hayride-hf/: Cargo.toml
crates/hayride-hf/src/: lib.rs
crates/hayride-host-traits/: Cargo.toml
crates/hayride-host-traits/src/: ai.rs  core.rs  db.rs  lib.rs  mcp.rs  silo.rs  wac.rs
crates/hayride-host-traits/src/ai/: context.rs  model.rs  nn.rs  rag.rs  tools.rs
crates/hayride-host-traits/src/ai/context/: context.rs  errors.rs
crates/hayride-host-traits/src/ai/model/: errors.rs  mock.rs  model.rs
crates/hayride-host-traits/src/ai/nn/: errors.rs  mock.rs  nn.rs
crates/hayride-host-traits/src/ai/rag/: errors.rs  mock.rs  rag.rs
crates/hayride-host-traits/src/ai/tools/: tools.rs
crates/hayride-host-traits/src/core/: core.rs  errors.rs  types.rs  version.rs
crates/hayride-host-traits/src/core/version/: errors.rs  mock.rs  version.rs
crates/hayride-host-traits/src/db/: db.rs  errors.rs
crates/hayride-host-traits/src/mcp/: auth.rs  tools.rs
crates/hayride-host-traits/src/mcp/auth/: auth.rs  errors.rs
crates/hayride-host-traits/src/mcp/tools/: errors.rs  tools.rs
crates/hayride-host-traits/src/silo/: silo.rs
crates/hayride-host-traits/src/wac/: errors.rs  wac.rs
crates/hayride-lancedb/: Cargo.toml
crates/hayride-lancedb/src/: lib.rs
crates/hayride-leptos/: Cargo.toml
crates/hayride-leptos/src/: lib.rs
crates/hayride-leptos/src/views/: app.rs  home.rs
crates/hayride-llama/: Cargo.toml
crates/hayride-llama/src/: lib.rs
crates/hayride-pb/: Cargo.toml
crates/hayride-runtime/: Cargo.toml
crates/hayride-runtime/src/: ai.rs  bindings.rs  core.rs  db.rs  engine.rs  lib.rs  mcp.rs  server.rs  silo.rs  wac.rs  websocket.rs
crates/hayride-runtime/src/ai/: ai.rs  ai_impl.rs  bindings.rs
crates/hayride-runtime/src/core/: bindings.rs  core.rs  core_impl.rs
crates/hayride-runtime/src/db/: bindings.rs  db.rs  db_impl.rs
crates/hayride-runtime/src/mcp/: bindings.rs  mcp.rs  mcp_impl.rs
crates/hayride-runtime/src/silo/: bindings.rs  silo.rs  silo_impl.rs
crates/hayride-runtime/src/wac/: bindings.rs  wac.rs  wac_impl.rs
crates/hayride-ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
crates/hayride-ui/src/: components.rs  lib.rs  main.rs  stores.rs  views.rs
crates/hayride-ui/src/components/: avatar.rs  chat.rs  config.rs  sidebar.rs
crates/hayride-ui/src/stores/: bindings.rs  prompt.rs
crates/hayride-ui/src/views/: app.rs  chat.rs
crates/hayride-utils/: Cargo.toml
crates/hayride-utils/src/: lib.rs  paths.rs
crates/hayride-utils/src/log/: logger.rs
crates/hayride-utils/src/paths/: hayride.rs  registry.rs
crates/hayride-utils/src/wit/: parser.rs
crates/hayride-wac/: Cargo.toml
crates/hayride-wac/src/: lib.rs
protobuf/: ai.proto
src/: main.rs
wit/: deps.toml  world.wit
