[package]
name = "hayride"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hayride-runtime = { workspace = true }
hayride-utils = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
wasmtime = { workspace = true }

[workspace]
resolver = '2'
members = [
    "crates/hayride-utils",
    "crates/hayride-runtime",
    "crates/hayride-lancedb",
    "crates/hayride-host-traits",
    "crates/hayride-llama",
    "crates/hayride-wac",
    "crates/hayride-ui",
    "crates/hayride-db",
]

[workspace.package]
version = "0.0.1"
authors = ["hayride-dev"]
edition = "2021"

[workspace.dependencies]
hayride-utils = { path = "crates/hayride-utils" }
hayride-runtime = { path = "crates/hayride-runtime" }
hayride-hf = { path = "crates/hayride-hf" }
hayride-host-traits = { path = "crates/hayride-host-traits" }
hayride-lancedb = { path = "crates/hayride-lancedb" }
hayride-llama = { path = "crates/hayride-llama" }
hayride-wac = { path = "crates/hayride-wac" }
hayride-db = { path = "crates/hayride-db" }
hayride-core = { path = "crates/hayride-core" }

hayride-llama-rs-sys = "0.0.4"

anyhow = "1.0.99"
async-trait = "0.1.89"
bytes = "1.10.0"
dashmap = "6.1.0"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.2"
hyper = "1.7.0"
hyper-tungstenite = "0.18.0"
hyper-util = "0.1.16"
log = "0.4.25"
log-reload = "0.1.3"
nix = { version = "0.30.1", features = ["signal"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
semver = "1.0.23"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
toml = "0.9.5"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
windows-sys = "0.60.2"
wasmtime = "34.0.0"
wasmtime-wasi = "34.0.0"
wasmtime-wasi-http = "34.0.0"
wit-parser = "0.225.0"

# hf deps
hf-hub = "0.4.3"

# lancedb deps
arrow-array = "54.1"
arrow-schema = "54.1"
lance = { version = "0.25.0" }
lancedb = { version = "0.18.2", features = ["sentence-transformers"] }

# db deps
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
tokio-postgres = "0.7.13"
rust_decimal    = "1.27.0"
rusqlite  = "0.37.0"

# wac deps
indexmap = "2.11.0"
miette = "7.6.0"
wac-graph = "0.8.0"
wac-parser = "0.8.0"
wac-resolver = "0.8.0"
wac-types = "0.8.0"

# ui deps
chrono = "0.4.39"
leptos = {version = "0.7.0", features = ["csr"]}
leptos_router = "0.7.0"
reactive_stores = "0.1.2"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wit-bindgen = "0.41.0"

[target.'cfg(unix)'.dependencies]
# remove need for external protoc, except on windows
lance = { version = "0.25.0", features = ["protoc"] }

[features]
default = ["lancedb", "llamacpp", "hf", "postgres"]
lancedb = ["hayride-runtime/lancedb"]
llamacpp = ["hayride-runtime/llamacpp"]
hf = ["hayride-runtime/hf"]
postgres = ["hayride-runtime/postgres"]
