[package]
name = "hayride-lancedb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hayride-host-traits = { workspace = true }

arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
log ={ workspace = true }
tokio = { workspace = true, features = ["full"] }
lance = { workspace = true }
lancedb = { workspace = true, features = ["sentence-transformers"] }

[target.'cfg(unix)'.dependencies]
# remove need for external protoc, except on windows
lance = { workspace = true, features = ["protoc"] }
