[package]
name = "hayride-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hayride-host-traits = { workspace = true }
hayride-utils = { workspace = true }

hayride-llama = { workspace = true, optional = true }
hayride-lancedb = { workspace = true, optional = true }
hayride-hf = { workspace = true, optional = true }
hayride-wac = { workspace = true }
hayride-db = { workspace = true }
hayride-core = { workspace = true }

anyhow = { workspace = true}
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-tungstenite = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true}
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
windows-sys = { workspace = true }

[features]
default = []
lancedb = ["dep:hayride-lancedb"]
llamacpp = ["dep:hayride-llama"]
hf = ["dep:hayride-hf"]
postgres = ["hayride-db/postgres"]
