[package]
name = "hayride-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
codee = { workspace = true }
leptos = { workspace = true }
leptos-use = { workspace = true }
leptos_router = { workspace = true }
reactive_stores = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[package.metadata.leptos]
assets-dir = "public"
