[package]
name = "hayride-utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
log-reload = { workspace = true }
semver = { workspace = true }
toml = { workspace = true }
wit-parser = { workspace = true }
